--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -18,16 +18,7 @@
       <h1>Bromine has skill issue</h1>
     </div>
     <div class="desc left-margin">
-      <p>The server could not route your request.</p>
-      <p id="uv-error"></p>
-      <code id="uv-error-code"></code>
-      <button id="uv-register-sw" value="Register service worker">
-        Register ServiceWorker
-      </button>
+      <p>sw was not registered. just clear site data and it should work</p>
     </div>
-<script is:inline src="/uv/uv.bundle.js"></script>
-    <script is:inline src="/uv/uv.config.js"></script>
-<script is:inline src="/register-sw.js"></script>
-<script is:inline src="/error.js"></script>
   </body>
 </html>
