--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,42 +1,20 @@
 ---
-import "../styles/global.css";
-import { Icon } from "astro-icon/components";
----
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1.0"
-    />
-    <title>A really shitty proxy called bromine</title>
-    <link rel="stylesheet" href="/index.css" />
-<script is:inline src="/baremux/index.js" defer></script>
-<script  is:inline src="/epoxy/index.js" defer></script>
-<script  is:inline src="/uv/uv.bundle.js" defer></script>
-<script is:inline src="/uv/uv.config.js" defer></script>
-<script is:inline src="/register-sw.js" defer></script>
-<script  is:inline src="/search.js" defer></script>
-<script is:inline src="/index.js" defer></script>
-  </head>
+import Layout from "../Layout.astro";
 
-  <body>
-    <h1 class="title">bromine</h1>
-    <form id="uv-form" class="flex-center">
-      <input
-        id="uv-search-engine"
-        value="https://www.duckduckgo.com/search?q=%s"
-        type="hidden"
-      />
-      <input id="uv-address" type="text" placeholder="Search the web freely" />
-    </form>
-    <div class="desc left-margin">
-      <p id="uv-error"></p>
-      <pre id="uv-error-code"></pre>
-    </div>
+import Lethal from "@/components/Lethal.astro";
+import Omnibar from '@/components/Omnibar.astro';
+---
+<Layout>
+  <div class="flex">
+    <Lethal/>
+
+              <main class="flex-grow">
+        <Omnibar class="p-8" />
     <div id="frames">
-      <iframe style="display: none;" id="uv-frame"></iframe>
-      <Icon name="tabler:arrow-narrow-right"/>
+      <iframe id="uv-frame" x-ref="frame"></iframe>
+
     </div>
-  </body>
-</html>
+    </main>
+              
+
+</Layout>
