--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,48 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 @import "tailwindcss";
+
+
+nav {
+  background: rgba(31, 29, 46, 0.5); /* Use RGBA for transparent background */
+  /* background: #1f1d2e; */
+  position: sticky;
+z-index: 1000; /* Ensures nav stays above other content */
+    top: 0;
+  /* opacity: 0.5; */
+}
+
+button {
+	color: white;
+}
+
+.title {
+	color: white;
+}
+
+
+#uv-frame {
+	border: none;
+	position: absolute;
+	z-index: 1;
+	width: 100vw;
+	height: 100vh;
+	background-color: #111;
+}
+
+input {
+  color: #6e6a86;
+}
+
+input:focus {
+
+  color: #e0def4;
+}
+
+body {
+  background: #191724;
+font-family: "Roboto", Arial, Helvetica, sans-serif;
+	/* margin: 0; */
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* min-height: 100vh; */
+}
