--- a/src/components/Omnibar.astro
+++ b/src/components/Omnibar.astro
@@ -1,8 +1,8 @@
 ---
-import Settings from "@/components/Settings.astro";
-import History from "@/components/History.astro"; // Added import
-import { Icon } from "astro-icon/components";
-import Bookmarks from "@/components/Bookmarks.astro";
+import Settings from "@/components/Settings.astro"
+import History from "@/components/History.astro" // Added import
+import { Icon } from "astro-icon/components"
+import Bookmarks from "@/components/Bookmarks.astro"
 ---
 
 <Bookmarks />
